# tlipob-importer

./: CLAUDE.md  LICENSE  main.py  ocr_engine.py  parser.py  pyproject.toml  tooltip_detector.py
ocr/: main.py  ocr_engine.py  tooltip_detector.py
src/ocr/: main.py  ocr.py  ocr_engine.py  parser.py
tests/: test_ocr.py
