[project]
name = "tlipob-importer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pyside6-essentials>=6.10.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
